[116] Style, naming, and spacing fixes

--- a/src/Auctionify.API/ClientApp/src/app/layout/footer/footer.component.scss
+++ b/src/Auctionify.API/ClientApp/src/app/layout/footer/footer.component.scss
@@ -1,4 +1,4 @@
-.main{
+.main {
     height: 500px;
     display: flex;
     margin: 0 auto;
@@ -8,52 +8,46 @@
     width: 1520px;
 }
 
-.containertop{
+.container-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 32px;
 }
 
-.left{
-}
-
-.left p{
+.left-side_top-footer p {
     padding-top: 32px;
 }
 
-.left ul{
+.left-side_top-footer ul {
     list-style: none;
     display: flex;
     padding-top: 32px;
 }
 
-.right{
-}
-
-.mainul{
+.main-ul{
     gap: 60px;
     display: flex;
     list-style: none;
 }
 
-.mainul ul{
+.main-ul ul{
     padding-left: 40px;
     font-weight: bold;
     list-style: none;
 }
 
-.mainul ul li{
+.main-ul ul li{
     padding-top: 30px;
     align-items: center;
     display: flex;
 }
 
-.mainul ul p{
+.main-ul ul p{
     padding-bottom: 24px;
 }
 
-.mainul ul li a{
+.main-ul ul li a{
     padding-left: 20px;
     text-decoration: none;
     color: inherit;
@@ -65,18 +59,14 @@
     background-color: #e0e0e0;
 }
 
-.containerbott{
+.container-bott{
     padding-top: 32px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.left_b{
-
-}
-
-.left_b ul {
+.left-bott ul {
     list-style: none;
     display: flex;
     gap: 40px;
@@ -91,7 +81,7 @@
     color: #e0e0e0;
 }
 
-.right_b{
+.right-bott{
     font-weight: bold;
     display: flex;
 }
